        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.7-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : minor
Bugzilla   : 14856
Frequency  : on ppc only
Description: not convert ost objects for directory because it's not exist.
Details    : ll_dir_getstripe assume dirrectory has ost objects but this wrong.

Severity   : normal
Bugzilla   : 12652
Description: Add FMODE_EXEC file flag for SLES10 SP1 kernel.

Severity   : enhancement
Bugzilla   : 13397
Description: Update to support 2.6.22.14 vanilla kernel.

Severity   : normal
Bugzilla   : 14533
Frequency  : rare, on recovery
Description: read procfs can produce deadlock in some situation
Details    : Holding lprocfs lock which send rpc can produce block for destroy
	     obd objects and this also block reconnect with -EALREADY. This isn't
	     fix all lprocfs bugs - but make it rare.

Severity   : enhancement
Bugzilla   : 15152
Description: Update kernel to RHEL5 2.6.18-53.1.14.el5.

Severity   : major
Frequency  : frequent on X2 node
Bugzilla   : 15010
Description: mdc_set_open_replay_data LBUG
Details    : Set replay data for requests that are eligible for replay.

Severity   : normal
Bugzilla   : 14321
Description: lustre_mgs: operation 101 on unconnected MGS
Details    : When MGC is disconnected from MGS long enough, MGS will evict the
	     MGC, and late on MGC cannot successfully connect to MGS and a lot
	     of the error messages complaining that MGS is not connected.

Severity   : major
Frequency  : on start mds
Bugzilla   : 14884
Description: Implement get_info(last_id) in obdfilter.

Severity   : normal
Frequency  : occasional
Bugzilla   : 13537
Description: Correctly check stale fid, not start epoch if ost not support SOM